--- a/bower.json
+++ b/bower.json
@@ -1,7 +1,6 @@
 {
   "name": "Borm",
   "authors": "toabr",
-  "license": "https://polymer.github.io/LICENSE.txt",
   "dependencies": {
     "app-layout": "PolymerElements/app-layout#^2.0.0",
     "app-route": "PolymerElements/app-route#^2.0.0",
@@ -13,9 +12,7 @@
     "paper-icon-button": "PolymerElements/paper-icon-button#^2.0.0",
     "polymer": "Polymer/polymer#^2.0.0",
     "webcomponentsjs": "webcomponents/webcomponentsjs#^1.0.0",
-    "iron-icons": "^2.1.1",
-    "iron-input": "^2.1.2",
-    "vaadin-radio-button": "^1.0.0-beta2"
+    "iron-icons": "^2.1.1"
   },
   "resolutions": {
     "polymer": "^2.0.0"
